--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +13,6 @@
         }
     </style>
 </head>
-
 <body class="bg-gray-900 text-white">
     <div class="container mx-auto p-4 flex flex-col items-center justify-center h-screen">
         <h1 class="text-3xl font-bold mb-4">Image to Caption Generator</h1>
@@ -24,15 +22,11 @@
         </div>        
         <input type="file" id="imageInput" accept="image/*" class="hidden">
         <div class="space-x-4">
-            <button id="browseButton"
-                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Browse</button>
-            <button id="generateCaption"
-                class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Generate
-                Caption</button>
+            <button id="browseButton" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Browse</button>
+            <button id="generateCaption" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Generate Caption</button>
         </div>
         <p id="caption" class="mt-4 text-center text-lg"></p>
     </div>
     <script src="app.js"></script>
 </body>
-
 </html>
