--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
             <button id="generateCaption" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Generate Caption</button>
         </div>
         <div id="loadingIndicator" class="mt-4 text-center flex justify-center items-center gap-2 mt-5 w-full">
-            <img class="h-6 w-6" src="assets/spinner.gif" alt="Loading...">
+            <img class="h-6 w-6" src="./images/spinner.gif" alt="Loading...">
             <p class="text-xl">Generating caption...</p>
         </div>
         <p id="caption" class="mt-4 text-center text-lg"></p>
